# rsnark

./: Cargo.toml  LICENSE  README.md  TODO.md
core/: Cargo.toml
core/examples/: demo.rs  macro_demo.rs  sub.rs  subcircuit_test.rs
core/src/: api.rs  builder.rs  circuit.rs  initer.rs  lib.rs  metadata.rs  types.rs  variable.rs
macros/: Cargo.toml
macros/src/: derive_circuit.rs  lib.rs
provers/core/: Cargo.toml
provers/core/src/: backend.rs  circuit_prover.rs  lib.rs  prover.rs  types.rs
provers/gnark/: Cargo.toml  build.rs
provers/gnark/assets/: libgo.h  provers-gnark.h
provers/gnark/go/: circuit.go  circuit_test.go  gen.go  go.mod  go.sum  groth16.go  multi_input_test.go  object.go  plonk.go  template_circuit_test.go  types.go  types_test.go
provers/gnark/go/circuit/: circuit.go  circuit_test.go  multi_input_test.go  template_circuit_test.go  types.go  types_test.go
provers/gnark/go/prover/: groth16.go  groth16_test.go  plonk.go  plonk_test.go
provers/gnark/go/prover/types/: compiled_circuit.go  curve.go  groth16.go  iface.go  plonk.go  public_witness.go  witness.go  witness_test.go
provers/gnark/src/: error.rs  ffi.rs  groth16.rs  lib.rs  plonk.rs
provers/gnark/src/types/: groth16.rs  mod.rs  traits.rs
provers/mock/: Cargo.toml
provers/mock/src/: lib.rs
rsnark/: Cargo.toml
rsnark/examples/: constant.rs  generics.rs  generics_expand.rs  simple.rs  simple_expand.rs  subcircuit.rs  subcircuit_expand.rs
rsnark/src/: lib.rs
tests/: go.mod  main.go
