[workspace]
members = ["core", "macros", "provers/core", "provers/gnark", "provers/mock"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ruint = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

rsnark-macros = { version = "0.1.0", path = "macros" }
rsnark-core = { version = "0.1.0", path = "core" }
rsnark-provers-core = { version = "0.1.0", path = "provers/core" }

anyhow = "1.0"
thiserror = "2.0.11"
