[workspace]
members = [
    "core",
    "macros",
    "provers/core",
    "provers/gnark",
    "provers/mock",
    "rsnark",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["rsnark-dev", "tiannian <dtiannian@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A Rust library to write Zero-Knowledge circuits for multiple prover systems"
repository = "https://github.com/tiannian/rsnark"
homepage = "https://github.com/tiannian/rsnark"
documentation = "https://docs.rs/rsnark"

[workspace.dependencies]
ruint = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

rsnark-macros = { version = "0.1.0", path = "macros" }
rsnark-core = { version = "0.1.0", path = "core" }
rsnark-provers-core = { version = "0.1.0", path = "provers/core" }
rsnark-provers-gnark = { version = "0.1.0", path = "provers/gnark" }
rsnark-provers-mock = { version = "0.1.0", path = "provers/mock" }
rsnark = { version = "0.1.0", path = "rsnark" }

anyhow = "1.0"
thiserror = "2.0.11"
