[package]
name = "rsnark-core"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
ruint = { workspace = true, features = ["serde"] }
serde = { workspace = true }
rsnark-macros = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
