[package]
name = "rsnark-core"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
rsnark-macros = { workspace = true }

num = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
