[package]
name = "rsnark-macros"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "derive", "parsing"] }
