[package]
name = "rsnark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
rsnark-core = { workspace = true }
rsnark-provers-core = { workspace = true }
rsnark-provers-gnark = { workspace = true }
rsnark-provers-mock = { workspace = true }
