[package]
name = "rsnark"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
rsnark-core = { workspace = true }
rsnark-provers-core = { workspace = true }
rsnark-provers-gnark = { workspace = true }
rsnark-provers-mock = { workspace = true }
