[package]
name = "rsnark-provers-gnark"
version = "0.1.0"
edition = "2024"

[dependencies]
rust2go = { version = "0.4.1" }
serde_json = { workspace = true }
thiserror = { workspace = true }

rsnark-core = { workspace = true }
rsnark-provers-core = { workspace = true }

[build-dependencies]
rust2go = { version = "0.4.1", features = ["build"] }
