[package]
name = "rsnark-provers-gnark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
rust2go = { version = "0.4.1" }
serde_json = { workspace = true }
thiserror = { workspace = true }

rsnark-core = { workspace = true }
rsnark-provers-core = { workspace = true }

[build-dependencies]
rust2go = { version = "0.4.1", features = ["build"] }
