[package]
name = "rsnark-provers-mock"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
rsnark-provers-core = { workspace = true }
rsnark-core = { workspace = true }

sha3 = "0.10.8"
thiserror = { workspace = true }
